tests/snapshots/errors/map_new_wrong_args.mc
// Error: Map<string, int>::`new`() should not take any arguments
let m = Map<string, int>::`new`(16);
